--- a/cmakelists/gdal/frmts/dimap/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/dimap/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_gdal_driver(TARGET gdal_DIMAP SOURCES dimapdataset.cpp)
 gdal_standard_includes(gdal_DIMAP)
-target_include_directories(gdal_DIMAP PRIVATE $<TARGET_PROPERTY:gdal_vrt,SOURCE_DIR>)
+target_include_directories(gdal_DIMAP PRIVATE ${GDAL_RASTER_FORMAT_SOURCE_DIR}/vrt)
