--- a/cmakelists/gdal/ogr/ogrsf_frmts/jml/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/jml/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_gdal_driver(TARGET ogr_JML SOURCES ogr_jml.h ogrjmldataset.cpp ogrjmllayer.cpp ogrjmlwriterlayer.cpp)
 gdal_standard_includes(ogr_JML)
-target_include_directories(ogr_JML PRIVATE $<TARGET_PROPERTY:ogr_MEM,SOURCE_DIR>)
+target_include_directories(ogr_JML PRIVATE ${GDAL_VECTOR_FORMAT_SOURCE_DIR}/mem)
 if (HAVE_EXPAT)
   target_include_directories(ogr_JML PRIVATE ${EXPAT_INCLUDE_DIRS})
   target_compile_definitions(ogr_JML PRIVATE -DHAVE_EXPAT=1)
