--- a/cmakelists/gdal/ogr/ogrsf_frmts/mvt/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/mvt/CMakeLists.txt
@@ -3,7 +3,7 @@ add_gdal_driver(
   SOURCES mvt_tile.cpp mvt_tile.h mvtutils.cpp mvtutils.h ogrmvtdataset.cpp
   BUILTIN)
 gdal_standard_includes(ogr_MVT)
-target_include_directories(ogr_MVT PRIVATE $<TARGET_PROPERTY:ogr_OSM,SOURCE_DIR>)
+target_include_directories(ogr_MVT PRIVATE ${GDAL_VECTOR_FORMAT_SOURCE_DIR}/osm)
 if (HAVE_GEOS)
   target_include_directories(ogr_MVT PRIVATE ${GEOS_INCLUDE_DIRS})
   target_compile_definitions(ogr_MVT PRIVATE -DHAVE_GEOS=1)
