dods: add include DAP directory
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/frmts/dods/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/dods/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_gdal_driver(TARGET gdal_DODS SOURCES libdap_headers.h dodsdataset2.cpp)
 gdal_standard_includes(gdal_DODS)
+target_include_directories(gdal_DODS PRIVATE ${DAP_INCLUDE_DIRS})
 gdal_target_link_libraries(TARGET gdal_DODS LIBRARIES DAP::DAP DAP::CLIENT)
 gdal_target_link_libraries(TARGET gdal_DODS LIBRARIES LibXml2::LibXml2)
 
