CI: disable trigger on azure-pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 # Azure Pipelines to build GDAL library and to run test with CMake
 
-#trigger:
+trigger: none
 #  branches:
 #    include:
 #      - '*'
