FindSqlite3: use same variable names with CMake bundled version

--- a/cmakelists/gdal/frmts/mbtiles/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/mbtiles/CMakeLists.txt
@@ -13,9 +13,9 @@ if (HAVE_GEOS)
   gdal_target_link_libraries(TARGET gdal_MBTiles LIBRARIES GEOS::GEOS)
 endif ()
 if (HAVE_SQLITE3)
-  target_include_directories(gdal_MBTiles PRIVATE ${SQLITE3_INCLUDE_DIRS})
+  target_include_directories(gdal_MBTiles PRIVATE ${SQLite3_INCLUDE_DIRS})
   target_compile_definitions(gdal_MBTiles PRIVATE -DHAVE_SQLITE)
-  gdal_target_link_libraries(TARGET gdal_MBTiles LIBRARIES ${SQLITE3_LIBRARY})
+  gdal_target_link_libraries(TARGET gdal_MBTiles LIBRARIES SQLite::SQLite3)
 endif ()
 if (GDAL_USE_LIBJSONC_INTERNAL)
   target_include_directories(gdal_MBTiles PRIVATE $<TARGET_PROPERTY:libjson,SOURCE_DIR>)
