--- a/cmakelists/gdal/ogr/ogrsf_frmts/gml/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/gml/CMakeLists.txt
@@ -35,7 +35,7 @@ if (HAVE_XERCESC)
   gdal_target_link_libraries(TARGET ogr_GML LIBRARIES XercesC::XercesC)
 endif ()
 if (HAVE_SQLITE3)
-  target_include_directories(ogr_GML PRIVATE ${SQLITE3_INCLUDE_DIRS})
+  target_include_directories(ogr_GML PRIVATE ${SQLite3_INCLUDE_DIRS})
   target_compile_definitions(ogr_GML PRIVATE -DHAVE_SQLITE)
-  gdal_target_link_libraries(TARGET ogr_GML LIBRARIES SQLITE3::SQLITE3)
+  gdal_target_link_libraries(TARGET ogr_GML LIBRARIES SQLite::SQLite3)
 endif ()
