--- a/cmakelists/gdal/ogr/ogrsf_frmts/osm/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/osm/CMakeLists.txt
@@ -12,8 +12,8 @@ if (HAVE_EXPAT)
   gdal_target_link_libraries(TARGET ogr_OSM LIBRARIES EXPAT::EXPAT)
 endif ()
 if (HAVE_SQLITE3)
-  target_include_directories(ogr_OSM PRIVATE ${SQLITE3_INCLUDE_DIR})
-  gdal_target_link_libraries(TARGET ogr_OSM LIBRARIES SQLITE3::SQLITE3)
+  target_include_directories(ogr_OSM PRIVATE ${SQLite3_INCLUDE_DIR})
+  gdal_target_link_libraries(TARGET ogr_OSM LIBRARIES SQLite::SQLite3)
 endif ()
 add_executable(osm2osm EXCLUDE_FROM_ALL osm2osm.cpp)
 gdal_standard_includes(osm2osm)
