--- a/cmakelists/gdal/frmts/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/CMakeLists.txt
@@ -111,7 +111,7 @@ gdal_dependent_format(gta "Generic Tagged Arrays" "HGTA_FOUND")
 gdal_dependent_format(webp "WebP" "HAVE_WEBP")
 gdal_dependent_format(hdf4 "Hierarchical Data Format Release 4 (HDF4)" "HDF4_FOUND;gdal_PDS")
 gdal_dependent_format(pdf "Geospatial PDF" "HAVE_PDFLIB")
-gdal_dependent_format(rasterlite "Rasterlite - Rasters in SQLite DB" "SQLITE3_FOUND;OGR_SQLITE")
+gdal_dependent_format(rasterlite "Rasterlite - Rasters in SQLite DB" "SQLite3_FOUND;OGR_SQLITE")
 gdal_dependent_format(mbtiles "MBTile" "HAVE_SQLITE3")
 gdal_dependent_format(postgisraster "PostGIS Raster driver" "HAVE_POSTGRESQL")
 gdal_dependent_format(bpg "BPG driver" "HAVE_BPG")
