--- a/cmakelists/gdal/gcore/CMakeLists.txt
+++ b/cmakelists/gdal/gcore/CMakeLists.txt
@@ -120,8 +120,8 @@ add_subdirectory(mdreader)
 
 if (HAVE_SQLITE3)
   target_compile_definitions(gcore PRIVATE -DSQLITE_ENABLED)
-  target_include_directories(gcore PRIVATE ${SQLITE3_INCLUDE_DIRS})
-  target_link_libraries(GDAL_LINK_LIBRARY INTERFACE SQLITE3::SQLITE3)
+  target_include_directories(gcore PRIVATE ${SQLite3_INCLUDE_DIRS})
+  target_link_libraries(GDAL_LINK_LIBRARY INTERFACE SQLite::SQLite3)
 endif ()
 if (HAVE_LIBXML2)
   target_compile_definitions(gcore PRIVATE -DHAVE_LIBXML2)
