--- a/cmakelists/gdal/ogr/ogrsf_frmts/vfk/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/vfk/CMakeLists.txt
@@ -16,7 +16,7 @@ add_gdal_driver(
           vfkfeaturesqlite.cpp)
 gdal_standard_includes(ogr_VFK)
 if (HAVE_SQLITE3)
-  target_include_directories(ogr_VFK PRIVATE ${SQLITE3_INCLUDE_DIR})
-  gdal_target_link_libraries(TARGET ogr_VFK LIBRARIES SQLITE3::SQLITE3)
+  target_include_directories(ogr_VFK PRIVATE ${SQLite3_INCLUDE_DIR})
+  gdal_target_link_libraries(TARGET ogr_VFK LIBRARIES SQLite::SQLite3)
   target_compile_definitions(ogr_VFK PRIVATE -DHAVE_SQLITE)
 endif ()
