--- a/cmakelists/gdal/CMakeLists.txt
+++ b/cmakelists/gdal/CMakeLists.txt
@@ -66,9 +66,10 @@ if (MINGW)
   if (TARGET_CPU MATCHES "x86_64")
     add_definitions(-m64)
   endif ()
-  # Workaround for export too large error - force problematic large file to be optimized to prevent string table overflow error
-  # Used -Os instead of -O2 as previous issues had mentioned, since -Os is roughly speaking -O2, excluding any
-  # optimizations that take up extra space. Given that the issue is a string table overflowing, -Os seemed appropriate.
+  # Workaround for export too large error - force problematic large file to be optimized to prevent string table
+  # overflow error Used -Os instead of -O2 as previous issues had mentioned, since -Os is roughly speaking -O2,
+  # excluding any optimizations that take up extra space. Given that the issue is a string table overflowing, -Os seemed
+  # appropriate.
   if (CMAKE_BUILD_TYPE MATCHES Debug)
     target_compile_options(gdal PRIVATE -Os)
     target_link_options(gdal PRIVATE -Os)
