PDS: catch up change
- reference to gtiff.h in gtiff driver

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/frmts/pds/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/pds/CMakeLists.txt
@@ -18,7 +18,7 @@ target_include_directories(
   gdal_PDS
   PRIVATE $<TARGET_PROPERTY:ogrsf_generic,SOURCE_DIR> ${GDAL_RASTER_FORMAT_SOURCE_DIR}/raw
           ${GDAL_RASTER_FORMAT_SOURCE_DIR}/vrt ${GDAL_VECTOR_FORMAT_SOURCE_DIR}/geojson
-          ${GDAL_VECTOR_FORMAT_SOURCE_DIR}/vrt)
+          ${GDAL_VECTOR_FORMAT_SOURCE_DIR}/vrt ${GDAL_RASTER_FORMAT_SOURCE_DIR}/gtiff)
 if (GDAL_USE_LIBJSONC_INTERNAL)
   target_include_directories(gdal_PDS PRIVATE $<TARGET_PROPERTY:libjson,SOURCE_DIR>)
 else ()
