--- a/cmakelists/gdal/frmts/pds/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/pds/CMakeLists.txt
@@ -25,3 +25,23 @@ else ()
   target_include_directories(gdal_PDS PRIVATE ${JSONC_INCLUDE_DIR})
   gdal_target_link_libraries(TARGET gdal_PDS LIBRARIES JSONC::JSONC)
 endif ()
+
+if (GDAL_USE_LIBGEOTIFF_INTERNAL)
+  if (RENAME_INTERNAL_LIBGEOTIFF_SYMBOLS)
+    target_compile_definitions(gdal_PDS PRIVATE -DRENAME_INTERNAL_LIBGEOTIFF_SYMBOLS)
+  endif ()
+  target_include_directories(gdal_PDS PRIVATE $<TARGET_PROPERTY:libgeotiff,SOURCE_DIR>)
+else ()
+  target_include_directories(gdal_PDS PRIVATE ${GEOTIFF_INCLUDE_DIR})
+  gdal_target_link_libraries(TARGET gdal_PDS LIBRARIES GEOTIFF::GEOTIFF)
+endif ()
+
+if (GDAL_USE_LIBTIFF_INTERNAL)
+  target_include_directories(gdal_PDS PRIVATE $<TARGET_PROPERTY:libtiff,SOURCE_DIR>)
+  if (RENAME_INTERNAL_LIBTIFF_SYMBOLS)
+    target_compile_definitions(gdal_PDS PRIVATE -DRENAME_INTERNAL_LIBTIFF_SYMBOLS)
+  endif ()
+else ()
+  target_include_directories(gdal_PDS PRIVATE ${TIFF_INCLUDE_DIRS})
+  gdal_target_link_libraries(TARGET gdal_PDS LIBRARIES ${TIFF_LIBRARIES})
+endif ()
