PDS, MRSID: fix target name
- change target libgetiff to geotiff

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/frmts/pds/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/pds/CMakeLists.txt
@@ -30,7 +30,7 @@ if (GDAL_USE_LIBGEOTIFF_INTERNAL)
   if (RENAME_INTERNAL_LIBGEOTIFF_SYMBOLS)
     target_compile_definitions(gdal_PDS PRIVATE -DRENAME_INTERNAL_LIBGEOTIFF_SYMBOLS)
   endif ()
-  target_include_directories(gdal_PDS PRIVATE $<TARGET_PROPERTY:libgeotiff,SOURCE_DIR>)
+  target_include_directories(gdal_PDS PRIVATE $<TARGET_PROPERTY:geotiff,SOURCE_DIR>)
 else ()
   target_include_directories(gdal_PDS PRIVATE ${GEOTIFF_INCLUDE_DIR})
   gdal_target_link_libraries(TARGET gdal_PDS LIBRARIES GEOTIFF::GEOTIFF)
