--- a/cmakelists/gdal/frmts/mrsid/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/mrsid/CMakeLists.txt
@@ -5,7 +5,7 @@ if (GDAL_USE_LIBGEOTIFF_INTERNAL)
   if (RENAME_INTERNAL_LIBGEOTIFF_SYMBOLS)
     target_compile_definitions(gdal_MRSID PRIVATE -DRENAME_INTERNAL_LIBGEOTIFF_SYMBOLS)
   endif ()
-  target_include_directories(gdal_MRSID PRIVATE $<TARGET_PROPERTY:libgeotiff,SOURCE_DIR>)
+  target_include_directories(gdal_MRSID PRIVATE $<TARGET_PROPERTY:geotiff,SOURCE_DIR>)
 else ()
   target_include_directories(gdal_MRSID PRIVATE ${GEOTIFF_INCLUDE_DIR})
   gdal_target_link_libraries(TARGET gdal_MRSID LIBRARIES GEOTIFF::GEOTIFF)
