--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -62,7 +62,7 @@ jobs:
     runs-on: windows-latest
     env:
       generator: MinGW Makefiles
-      CONFIGURATION: "gdal\\cmake4gdal\\configurations\\windows.cmake"
+      CONFIGURATION: "gdal\\cmake4gdal\\configurations\\mingw.cmake"
       JAVA_HOME: "C:\\Program Files\\Java\\zulu-11-azure-jdk_11.33.15-11.0.4-win_x64"
     steps:
       - name: Checkout GDAL master HEAD
