ogr_DODS: fix setting of include directory
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/ogr/ogrsf_frmts/dods/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/dods/CMakeLists.txt
@@ -9,6 +9,7 @@ add_gdal_driver(
           ogrdodslayer.cpp
           ogrdodssequencelayer.cpp)
 gdal_standard_includes(ogr_DODS)
+target_include_directories(ogr_DODS PRIVATE ${DAP_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS})
 gdal_target_link_libraries(TARGET ogr_DODS LIBRARIES DAP::DAP DAP::CLIENT)
 gdal_target_link_libraries(TARGET ogr_DODS LIBRARIES LibXml2::LibXml2)
 if (DAP_VERSION VERSION_GREATER "3.9" OR DAP_VERSION VERSION_EQUAL "3.9")
