PGeo: add ODBC_INCLUDE_DIRS
This fixes build error when include cpl_odbc.h from source.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/ogr/ogrsf_frmts/pgeo/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/pgeo/CMakeLists.txt
@@ -6,3 +6,6 @@ add_gdal_driver(
   BUILTIN)
 gdal_standard_includes(ogr_PGeo)
 target_include_directories(ogr_PGeo PRIVATE $<TARGET_PROPERTY:ogr_OpenFileGDB,SOURCE_DIR>)
+
+target_include_directories(ogr_PGeo PRIVATE ${ODBC_INCLUDE_DIRS})
+target_link_libraries(ogr_PGeo PRIVATE ODBC::ODBC ODBC::ODBCINST)
