CI: disable autotest run on linux/windows
This disables autotest run on azure-pipeline.
Current cmake script is broken for autotest. It does not run anything
and exit as succeeded.
It make a misleading understanding of test result.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/ci/azure-pipelines/linux.yml
+++ b/ci/azure-pipelines/linux.yml
@@ -24,7 +24,7 @@ steps:
   displayName: run quicktest
   inputs:
     cmakeArgs: --build $(Build.BinariesDirectory)/build --target quicktest
-- task: CMake@1
-  displayName: run autotest
-  inputs:
-    cmakeArgs: --build $(Build.BinariesDirectory)/build --target autotest
+#- task: CMake@1
+#  displayName: run autotest
+#  inputs:
+#    cmakeArgs: --build $(Build.BinariesDirectory)/build --target autotest
