--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
 
-  build-linux:
+  build-linux-20.04:
     runs-on: ubuntu-20.04
     env:
       CONFIGURATION: gdal/cmake4gdal/configurations/full_drivers.cmake
@@ -33,6 +33,7 @@ jobs:
     - name: Install dependency
       run: |
         sudo add-apt-repository -y ppa:ubuntugis/ubuntugis-unstable
+        sudo add-apt-repository -y ppa:miurahr/sfcgal
         sudo apt-get update
         sudo apt-get install -y -q bison libjpeg-dev libgif-dev liblzma-dev libgeos-dev git \
            libcurl4-gnutls-dev libproj-dev libxml2-dev  libxerces-c-dev libnetcdf-dev netcdf-bin \
