--- a/cmakelists/gdal/frmts/gtiff/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/gtiff/CMakeLists.txt
@@ -75,3 +75,7 @@ if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.16)
   set_property(SOURCE gt_citation.cpp gt_wkt_srs.cpp geotiff.cpp gt_jpeg_copy.cpp tifvsi.cpp gt_overview.cpp
                PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
 endif ()
+
+if (HAVE_ZSTD)
+  target_compile_definitions(gdal_GTIFF PRIVATE -DZSTD_SUPPORT)
+endif()
