mrf, gtiff: fix zstd support
- Add link libraries entry

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/frmts/mrf/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/mrf/CMakeLists.txt
@@ -52,4 +52,6 @@ endif ()
 
 if (HAVE_ZSTD)
   target_compile_definitions(gdal_MRF PRIVATE -DZSTD_SUPPORT)
+  target_include_directories(gdal_MRF PRIVATE ${ZSTD_INCLUDE_DIRS})
+  gdal_target_link_libraries(TARGET gdal_MRF LIBRARIES ZSTD::ZSTD)
 endif ()
