--- a/cmakelists/gdal/frmts/gtiff/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/gtiff/CMakeLists.txt
@@ -78,4 +78,6 @@ endif ()
 
 if (HAVE_ZSTD)
   target_compile_definitions(gdal_GTIFF PRIVATE -DZSTD_SUPPORT)
+  target_include_directories(gdal_GTIFF PRIVATE ${ZSTD_INCLUDE_DIRS})
+  gdal_target_link_libraries(TARGET gdal_GTIFF LIBRARIES ZSTD::ZSTD)
 endif ()
