--- a/cmakelists/gdal/port/CMakeLists.txt
+++ b/cmakelists/gdal/port/CMakeLists.txt
@@ -321,5 +321,5 @@ endif ()
 if (HAVE_ZSTD)
   target_compile_definitions(cpl PRIVATE -DHAVE_ZSTD)
   target_include_directories(cpl PRIVATE ${ZSTD_INCLUDE_DIRS})
-  target_link_libraries(cpl PRIVATE ZSTD::ZSTD)
+  target_link_libraries(cpl PRIVATE ZSTD::zstd)
 endif ()
