Improve and enable ZSTD support (#21)
* Enable ZSTD support

- Introduce standard quality FindZSTD.cmake
- set -DHAVE_ZSTD or -DZSTD_SUPPORT for drivers

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

* cmake-format

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

* libtiff: fix zstd support

- Fix include error in libtiff zstd.h include

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

* mrf, gtiff: fix zstd support

- Add link libraries entry

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

* zstd: change imported target name

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

* findzstd: add comment about the future direction

Zstandard library is built with CMake. When they export cmake config as its dictibution,
we should rmeove findzstd module.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

* findzstd: fix result variabe document

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/frmts/gtiff/libtiff/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/gtiff/libtiff/CMakeLists.txt
@@ -81,7 +81,8 @@ endif ()
 
 if (HAVE_ZSTD)
   target_compile_definitions(libtiff PRIVATE -DZSTD_SUPPORT)
-  target_link_libraries(libtiff PRIVATE ZSTD::ZSTD)
+  target_include_directories(libtiff PRIVATE ${ZSTD_INCLUDE_DIRS})
+  target_link_libraries(libtiff PRIVATE ZSTD::zstd)
 endif ()
 
 if (HAVE_WEBP)
