--- a/cmakelists/gdal/port/CMakeLists.txt
+++ b/cmakelists/gdal/port/CMakeLists.txt
@@ -317,3 +317,9 @@ if (CRYPTOPP_USE_ONLY_CRYPTODLL_ALG AND NOT BULID_SHARED_LIBS)
   # When linking against the static lib: CRYPTOPP_LIB = c:/install-cryptopp-x64/lib/cryptlib.lib
   target_compile_definitions(cpl PRIVATE -DUSE_ONLY_CRYPTODLL_ALG)
 endif ()
+
+if (HAVE_ZSTD)
+  target_compile_definitions(cpl PRIVATE -DHAVE_ZSTD)
+  target_include_directories(cpl PRIVATE ${ZSTD_INCLUDE_DIRS})
+  target_link_libraries(cpl PRIVATE ZSTD::zstd)
+endif ()
