--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -140,11 +140,8 @@ jobs:
         conda install --yes --quiet --name gdalenv curl libiconv icu git python=3.7 swig numpy pytest zlib clcache
         conda install --yes --quiet --name gdalenv -c conda-forge proj geos hdf4 hdf5 \
             libnetcdf openjpeg poppler libtiff libpng xerces-c expat libxml2 kealib json-c \
-            cfitsio freexl geotiff jpeg libpq libspatialite libtiff libwebp-base \
-            pcre postgresql sqlite tiledb zstd charls cryptopp cgal jasper \
-            doxygen librttopo
-        python -m pip install -U pip wheel setuptools numpy
-        python -m pip install -r gdal/autotest/requirements.txt
+            cfitsio freexl geotiff jpeg libpq libspatialite libwebp-base pcre postgresql \
+            sqlite tiledb zstd charls cryptopp cgal jasper doxygen librttopo libkml openssl xz
         python $GITHUB_WORKSPACE/gdal/cmake4gdal/deploy.py
     - name: Configure
       shell: bash -l {0}
