--- a/cmakelists/gdal/frmts/jpegls/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/jpegls/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_gdal_driver(TARGET gdal_JPEGLS SOURCES jpegls_header.h jpeglsdataset.cpp)
 gdal_standard_includes(gdal_JPEGLS)
-gdal_target_link_libraries(TARGET gdal_JPEGLS LIBRARIES CharLS::CharLS)
+gdal_target_link_libraries(TARGET gdal_JPEGLS LIBRARIES CharLS::charls)
 
 if (CharLS_VERSION STREQUAL 1)
   target_compile_definitions(gdal_JPEGLS PRIVATE -DCHARLS_INTERFACE_H)
